# aws-hackday-micro

./: .claude_code.settings.json  .taplo.toml  CLAUDE.md  Makefile  README.md  pyproject.toml
.claude/: settings.json
.claude/hooks/: ruff_formatter.py
examples/async-crewai-agent/: README.md  main.py  pyproject.toml
examples/daily-assistant-mcp/: README.md  client.py  main.py  pyproject.toml
examples/langgraph-research-agent/: README.md  client.py  main.py  pyproject.toml
examples/notebook/: 0822-hackday.ipynb
examples/streaming-chat-memory/: README.md  client.py  main.py  pyproject.toml
src/friendli_app/cli/typer_util/: builder.py
