[build-system]
requires = [ "setuptools>=61.0" ]
build-backend = "setuptools.build_meta"

[project]
name = "async-crewai-agent"
version = "0.1.0"
description = "Asynchronous execution agent with LLM streaming and CrewAI integration"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
  "friendli-app",
  "openai>=0.10.7",
  "crewai>=0.80.0",
  "pydantic>=2.11.7",
  "fastapi>=0.116.1",
]

[tool.setuptools]
py-modules = [ "main" ]
