[build-system]
requires = [ "setuptools>=61.0" ]
build-backend = "setuptools.build_meta"

[project]
name = "daily-assistant-mcp"
version = "0.1.0"
description = "A practical MCP server with everyday useful tools for personal productivity"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [ "mcp>=1.12.4", "requests>=2.31.0", "python-dateutil>=2.9.0" ]

[tool.setuptools]
py-modules = [ "main" ]
