[build-system]
requires = [ "setuptools>=61.0" ]
build-backend = "setuptools.build_meta"

[project]
name = "streaming-chat-memory"
version = "0.1.0"
description = "Streaming chat agent with persistent memory using mem0 and Friendli serverless endpoints"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
  "friendli-app",
  "mem0ai>=0.1.0",
  "openai>=1.0.0",
  "uvicorn>=0.32.0",
  "fastapi>=0.115.0",
  "pydantic>=2.10.0",
]

[tool.setuptools]
py-modules = [ "main" ]
